# daisypy-optim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  python-publish.yml
benchmarks/: benchmark_read_csv.py  generate_time_series.py
daisypy/optim/: __init__.py  aggregate_fns.py  aggregate_objective.py  ax.py  ax_optimizer.py  cma_optimizer.py  create.py  csv_log.py  csv_logger.py  dai_file_generator.py  dlf_data_extraction.py  file_generator.py  file_generators.py  formatters.py  log.py  logger.py  logging.py  loss.py  loss_fns.py  loss_wrapper.py  multi_file_generator.py  multi_objective.py  objective.py  optimizer.py  parameter.py  problem.py  py_file_generator.py  runner.py  scalar_objective.py  sequential_optimizer.py  skopt_optimizer.py  tensorboard_logger.py  terminal_log.py  util.py  visualize.py
daisypy/optim/data/: analyze.py  default-template.dai  optimize_template.py
doc/: development.md  example.py  getting-started-linux.md  getting-started-win.md  single_objective_two_parameters_cma.py
doc/example-data/: field_nitrogen.dlf  measured-field-nitrogen.csv  template.dai
doc/examples/: README.md  multi_objective_ax.py  multiple_scenarios.py  multiple_scenarios_with_python.py  single_objective_combined_outputs.py  single_objective_two_parameters_ax.py  single_objective_two_parameters_cma.py  single_objective_two_parameters_sequential.py  single_objective_with_python.py
doc/examples/example-data/: measured-field-nitrogen.csv  template.dai
doc/examples/example-data/combined-outputs/: run.dai  target.csv  template.dai
doc/examples/example-data/multiple-scenarios/: reference.dai  target-askov.csv  target-foulum.csv  target-jyndevad.csv  template-python-reaction.dai  template.dai
doc/examples/example-data/python-chemical-reaction/: daisy-react.py  test-pyreact.dai
examples/soil-hydraulic/: optimize.py
tests/: hello.dai  markers.py  mock_problem.py  mockup.py  test_cma_optimizer.py  test_csv_log.py  test_dai_file_generator.py  test_default_logger.py  test_dlf_data_extraction.py  test_multi_file_generator.py  test_objectives.py  test_problem.py  test_py_file_generator.py  test_python_chemical_reaction.py  test_run_with_python.py  test_runner.py  test_scalar_objective.py  test_sequential_optimizer.py  test_skopt_optimizer.py  test_terminal_log.py
tests/py-files/: util.py
tests/templates/: template.dai  template.py  template2.py
tests/test-data/dlfs/: soil_NO3_profile.dlf
tests/test-data/python-chemical-reaction/: target.csv  test-pyreact.dai
tests/test-data/targets/: comma-separated.csv  semi-colon-separated.csv  tab-seperated.csv
