[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "daisypy-optim"
authors = [
  { name="Silas Nyboe Ørting", email="silas@di.ku.dk" },
]
description = "Optimization framework for Daisy"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "pandas",
    "daisypy-io@git+https://github.com/daisy-model/daisypy-io"
]

dynamic = ["version"]
readme = "README.md"

[project.scripts]
daisypy_optim_create = "daisypy.optim.create:main"

[project.urls]
Homepage = "https://daisy.ku.dk/"

[project.optional-dependencies]
cma = ["cma"]
skopt = ["scikit-optimize", "joblib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["daisypy.optim"]
namespaces = true

[tool.setuptools_scm]
version_file = "daisypy/optim/_version.py"

[tool.pylint.main]
init-hook = 'import sys; sys.path.append(".")'
ignored-modules = [ "numpy", "skopt", "joblib", "cma", "pandas", "scipy", "matplotlib", "daisypy.io" ]

[tool.pylint.messages_control]
disable = [
    'trailing-whitespace',
    'trailing-newlines',
    'too-few-public-methods',
    'missing-module-docstring',
    'missing-class-docstring',
    'R0801', # Similar lines in two files
 ]
 ignore = [
     '_version.py',
     'data',
 ]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "slow: marks test as slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
command_line = "-m pytest"
source = ["."]

[tool.coverage.report]
show_missing = "true"
