[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "daisypy-optim"
authors = [
  { name="Silas Nyboe Ørting", email="silas@di.ku.dk" },
]
description = "Optimization framework for Daisy"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "pandas",
    "daisypy-io",
    "matplotlib"
]

dynamic = ["version"]
readme = "README.md"

[project.scripts]
daisypy_optim_create = "daisypy.optim.create:main"

[project.urls]
Homepage = "https://daisy.ku.dk/"

[project.optional-dependencies]
cma = ["cma"]
skopt = ["scikit-optimize", "joblib"]
dev = ["pylint", "pytest"]

[tool.uv.sources]
daisypy-io = { git = "https://github.com/daisy-model/daisypy-io" }

[tool.setuptools.packages.find]
where = ["."]
include = ["daisypy.optim"]
namespaces = true

[tool.setuptools_scm]
version_file = "daisypy/optim/_version.py"

[tool.pylint.messages_control]
disable = [
    'trailing-whitespace',
    'trailing-newlines',
    'too-few-public-methods',
    'missing-module-docstring',
    'missing-class-docstring',
    'R0801', # Similar lines in two files
 ]
 ignore = [
     '_version.py',
     'data',
     'build',
     '.venv',
     'example-data',
     'test-data',
     'templates'
 ]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "slow: marks test as slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
command_line = "-m pytest"
source = ["daisypy"]

[tool.coverage.report]
show_missing = "true"
